--- a/website/style.css
+++ b/website/style.css
@@ -19,6 +19,8 @@
 
 #editor .json-editor-btn-add,
 #editor .json-editor-btn-delete,
+#editor .json-editor-btn-moveup,
+#editor .json-editor-btn-movedown,
 #editor .json-editor-btn-subtract,
 #editor .json-editor-btn-save,
 #editor .json-editor-btn-copy,
@@ -62,6 +64,8 @@
 
 #editor .json-editor-btntype-editjson,
 #editor .json-editor-btntype-properties,
+#editor .json-editor-btn-moveup,
+#editor .json-editor-btn-movedown,
 #editor .json-editor-btntype-add {
   @apply btn btn-info btn-soft btn-xs;
 }
